Lower water in ocean biomes